--- a/Index.css
+++ b/Index.css
@@ -1,36 +1,78 @@
-html { 
-    height: -webkit-fill-available;    
+html {
+  height: -webkit-fill-available;    
 }
 body {
-    display: flex;    
-    flex-direction: column;    
-    justify-content: space-between;    
-    min-height: 100vh;    
-    min-height: 100svh;    
-    min-height: -webkit-fill-available;    
-    margin: 0px;   
-    font-family: sans-serif;    
-    background-color: #83c8f2;    
+  display: flex;    
+  flex-direction: column;    
+  justify-content: space-between;    
+  min-height: 100vh;    
+  min-height: 100svh;    
+  min-height: -webkit-fill-available;    
+  margin: 0px;  
+  color:blue;
+  font-family: fantasy;    
+  background-color: yellow;    
 }
 #superior {
-    display: flex;
-    height: 8vmax;   
-    justify-content: center;    
-    align-items: center;    
-    font-size: 4vmax;    
-    color: white;    
-    background-color: #6c4675;    
+  display: flex;
+  height: 8vmax;  
+  justify-content: center;    
+  align-items: center;    
+  font-size: 4vmax;    
+  color: rgb(255, 255, 255);    
+  background-color: blue;    
 }
 .seccio {
-    flex: 1;    
-    display: none;    
+  flex: 1;    
+  display: none;    
 }
 #seccio_1 {
-    display: flex;    
-    justify-content: center;    
-    align-items: center;    
-    font-size: 4vmax;
+  display: flex;    
+  justify-content: center;    
+  align-items: center;    
+  font-size: blue;
 }
 #menu {
-    height: 8vmax;    
+  display: flex;
+  height: 8vmax;
+}
+#menu i{
+  flex: 1;    
+  display: flex;  
+  justify-content: center;
+  align-items: center;
+  color: rgb(255, 255, 255);
+  background-color: blue;
+  font-size: 5vmax;
+  cursor: pointer;    
+}
+#seccio_0 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 4vmax;
+}
+#credencials {
+  display: flex;
+  flex-direction: column;
+  text-align: right;
+  font-size: 3vmax;
+  margin: 5vmin;
+}
+#credencials div {    
+  margin-bottom: 1vmin;
+}
+#credencials input {  
+  max-width: 20vmax;    
+  font-size: 3vmax;
+}
+#botons_sessio {
+  display: flex;
+  align-items: center;
+}
+#botons_sessio button {  
+  font-size: 3vmax;
+  padding: 2vmin;
+  margin: 1vmin;
 }
